# P-RAG

./: .dockerignore  .env  .env.production  .env.staging  .gitignore  BENJI architecture.md  Dockerfile  QueriesToTests.txt  app.py  baseline_capture_result.md  build_rxclass_lookup.py  check_fts_illness.py  check_sab.py  check_search_index.py  client.py  client_old.py  client_py_chatgptversion.txt  codebase_guide.py  config.py  create_test_docs.py  debug_cells.py  debug_diabetes.py  debug_live.py  debug_md.py  debug_medical.py  dental_indexer.py  docker-compose.yml  drug_intelligence_api.py  illness_classification.md  indexer.py  main.py  medical_indexer.py  medical_indexer_simple.py  member_info_provider.py  p_insurance_index.db  pyproject.toml  readme.md  requirements.docker.txt  requirements.txt  rx_indexer_flow.md  (+7 more)
app/: app.py  client.py  llm_adapter.py  server.py
clients/: client.py
debug/: debug_cells.py  debug_dental.py  debug_info_scoring.py  debug_md.py  debug_medical.py  debug_summary.py
indexers/: build_rxclass_lookup.py  dental_indexer.py  indexer.py  medical_indexer.py  medical_indexer_test.py  p_insurance_index.db  run_indexer.py  rx_classifier.py  rx_indexer.py  sbc_indexer.py  vision_indexer.py
indices/: 2024_medical_gold.json  2025_dental_silver.json  2025_medical_gold.json  2026_dental_1000016_premera_dental_plan_standard.json  2026_dental_1000016_willamette_dental_plan_standard.json  2026_dental___willamette_dental_plan.json  2026_medical_PPO__premera_employees_health_plan_standard_ppo_retiree_plan_non_grandfathered_retiree.json  drug_names.json  (+9 more)
(+206 files in other folders)
